--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,8 @@ plugins {
 	id 'org.jetbrains.kotlin.jvm' version '1.7.22'
 	id 'org.jetbrains.kotlin.plugin.spring' version '1.7.22'
 	id 'org.jetbrains.kotlin.plugin.jpa' version '1.7.22'
+	id "org.jetbrains.kotlin.plugin.lombok" version "1.8.21"
+	id 'io.freefair.lombok' version '5.3.0'
 }
 
 group = 'com.project'
@@ -26,6 +28,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.jetbrains.kotlin:kotlin-reflect'
 	implementation 'com.zaxxer:HikariCP:5.0.1'
+	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'com.fasterxml.jackson.module:jackson-module-kotlin'
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'org.postgresql:postgresql'
 	annotationProcessor 'org.projectlombok:lombok'
