Progres CRUD User

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 ## PostgreSQL
 spring.datasource.url=jdbc:postgresql://localhost:5432/saluyudev
 spring.datasource.username=postgres
-spring.datasource.password=irsanramadhan13
+spring.datasource.password=postgres
 
 ## Default connection pool
 spring.datasource.hikari.connection-timeout=20000
