--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 ## PostgreSQL
-spring.datasource.url=jdbc:postgresql://localhost:5432/saluyudev
+spring.datasource.url=jdbc:postgresql://54.254.198.15:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 
