--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,8 @@ configurations {
 
 repositories {
 	mavenCentral()
+	maven { url "https://plugins.gradle.org/m2/" }
+        gradlePluginPortal()
 }
 
 dependencies {
