--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,12 @@ spring.datasource.hikari.auto-commit=true
 spring.datasource.hikari.max-lifetime=900000
 spring.datasource.hikari.leakDetectionThreshold=60000
 spring.datasource.hikari.idle-timeout=900000
+
+# Specify the path of the OpenAPI documentation
+springdoc.api-docs.path=/v3/api-docs
+# Specify the path of the Swagger UI
+springdoc.swagger-ui.path=/swagger-ui.html
+# Enable or disable Swagger UI
+springdoc.swagger-ui.enabled=true
+
+server.servlet.context-path=/saluyustore-service
