--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,11 +2,12 @@
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
 
 ## PostgreSQL
-spring.datasource.url=jdbc:postgresql://database-saluyu.czr6ikqlkfoh.ap-southeast-1.rds.amazonaws.com:5432/postgres
-spring.datasource.username=saluyustore
-spring.datasource.password=saluyustore
+spring.datasource.url=jdbc:postgresql://db.xcmmfmxxpsycumbekcec.supabase.co:5432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=saluyustore.
 
 ## Default connection pool
 spring.datasource.hikari.connection-timeout=20000
