--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,14 @@
 # Show sql
 spring.jpa.show-sql=true
+spring.jpa.database=postgresql
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 ## PostgreSQL
 spring.datasource.url=jdbc:postgresql://db.xcmmfmxxpsycumbekcec.supabase.co:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=saluyustore.
+spring.datasource.driver-class-name=org.postgresql.Driver
 ## Default connection pool
 spring.datasource.hikari.connection-timeout=20000
 spring.datasource.hikari.minimum-idle=10
