--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,8 +5,8 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 ## PostgreSQL
-spring.datasource.url=jdbc:postgresql://db.xcmmfmxxpsycumbekcec.supabase.co:5432/postgres
-spring.datasource.username=postgres
+spring.datasource.url=jdbc:postgresql://aws-0-ap-southeast-1.pooler.supabase.com:5432/postgres
+spring.datasource.username=postgres.xcmmfmxxpsycumbekcec
 spring.datasource.password=saluyustore.
 spring.datasource.driver-class-name=org.postgresql.Driver
 ## Default connection pool
